# kyouth_week4

./: .env.example  README.md  docker-compose.yml  index.html
backend/: Dockerfile  README.md  pyproject.toml
backend/sql/: count_avg_fees_length.sql  count_cards.sql  count_categories.sql  count_total_cards.sql  fetch_card_by_title.sql  fetch_untagged_cards.sql  get_content_hash.sql  insert_fields.sql  open_table.sql  update_min_annual_income.sql
backend/src/: app.py  loader.py  main.py  processor.py  profiler.py  tag_data.py
backend/src/api/: routes.py  schemas.py
backend/src/config/: settings.py
backend/src/etl/: loader.py  main.py  processor.py  profiler.py
backend/src/rag/: db_server.py  prompt_model.py  prompts.py  rate_limits.txt  retriever.py  throttler.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py
frontend/src/routes/: api.py  chatbot.py  dashboard.py  home.py
frontend/src/services/: backend.py
frontend/src/static/css/: card_detail.css  chatbot.css  dashboard.css  landing.css  style.css
frontend/src/static/js/: chatbot.js  dashboard.js  utils.js
frontend/src/templates/: base.html  card_detail.html  chatbot.html  dashboard.html  landing.html
sql/: count_categories.sql  distinct_banks.sql  fetch_all_cards.sql  fetch_all_full_cards.sql  fetch_card_by_title.sql  insert_fields.sql  open_table.sql
