[project]
name = "backend"
version = "0.1.0"
description = "week4-backend"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.138.1",
    "fastmcp>=3.4.2",
    "google-genai>=2.10.0",
    "jinja2>=3.1.6",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.*",
    "uvicorn>=0.49.0",
]
